[package]
name = "solana-transfer-watch"
version = "0.1.0"
edition = "2021"
description = "Polls a Solana address for large SOL / SPL token transfers and alerts to Discord. Runs as a scheduled GitHub Action, no server required."

[[bin]]
name = "solana-transfer-watch"
path = "src/main.rs"

[dependencies]
reqwest = { version = "0.11", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
